Correctly display the list of items added to the cart on mobile

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -77,7 +77,7 @@ nav ul a:hover {
     display: block;
   }
 
-  nav ul {
+  nav .navbar-list {
     font-size: 1.2em;
     position: absolute;
     left: -100%;
@@ -101,6 +101,10 @@ nav ul a:hover {
     background-color: #801f2c;
     color: white;
     opacity: 1;
+  }
+
+  nav ul.menu-open {
+    left: 0;
   }
 }
 
